--- a/YouScanTestAssesmentTests/packages.config
+++ b/YouScanTestAssesmentTests/packages.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Akka" version="1.0.4" targetFramework="net45" />
+  <package id="Akka.DI.AutoFac" version="1.0.4" targetFramework="net452" />
+  <package id="Akka.DI.Core" version="1.0.4" targetFramework="net452" />
+  <package id="Akka.DI.TestKit" version="1.0.4" targetFramework="net452" />
   <package id="Akka.TestKit" version="1.0.4" targetFramework="net45" />
   <package id="Akka.TestKit.Xunit2" version="1.0.4" targetFramework="net45" />
+  <package id="Autofac" version="3.5.2" targetFramework="net452" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="xunit" version="2.0.0" targetFramework="net452" />
