--- a/YouScanTestAssesment/packages.config
+++ b/YouScanTestAssesment/packages.config
@@ -5,5 +5,5 @@
   <package id="Akka.DI.Core" version="1.0.4" targetFramework="net46" />
   <package id="Autofac" version="3.5.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
-  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net46" />
+  <package id="StyleCop.Analyzers" version="1.0.0-rc1" targetFramework="net46" developmentDependency="true" />
 </packages>
